<<<<<<< HEAD
syntax = "proto3";

package notes;

option go_package = "./;notes";

service NotesService {
  rpc Create(Note) returns (CreateNoteResponse){}

  rpc Get(GetNoteRequest) returns (GetNoteResponse) {}

  rpc GetNotesByName(GetNotesByNameRequest) returns (GetNotesByNameResponse) {}

  rpc GetAll(GetAllNotesRequest) returns (GetAllNotesResponse) {}

}

message Note {
  int64 id = 1;
  string name = 2;
  string note_content = 3;
}

message GetNoteRequest {
  int64 id = 1;
}

message GetNoteResponse {
  string name = 1;
}

message CreateNoteResponse {
  Note note = 1;
}

message GetAllNotesRequest {

}

message GetAllNotesResponse {
  repeated Note allNotes = 1;
}

message GetNotesByNameRequest {
  string name = 1;
}

message GetNotesByNameResponse {
  repeated Note notes = 1;
=======
syntax = "proto3";

package notes;

option go_package = "./;notes";

service NotesService {
  rpc Create(Note) returns (CreateNoteResponse){}

  rpc Get(GetNoteRequest) returns (GetNoteResponse) {}

  rpc GetNotesByName(GetNotesByNameRequest) returns (GetNotesByNameResponse) {}

  rpc GetAll(GetAllNotesRequest) returns (GetAllNotesResponse) {}

}

message Note {
  int64 id = 1;
  string name = 2;
  string note_content = 3;
}

message GetNoteRequest {
  int64 id = 1;
}

message GetNoteResponse {
  string name = 1;
}

message CreateNoteResponse {
  Note note = 1;
}

message GetAllNotesRequest {

}

message GetAllNotesResponse {
  repeated Note allNotes = 1;
}

message GetNotesByNameRequest {
  string name = 1;
}

message GetNotesByNameResponse {
  repeated Note notes = 1;
>>>>>>> 9006d60a1538c3867b12bcf075dde1053ad2a85e
}